--- a/index.html
+++ b/index.html
@@ -15,21 +15,21 @@
 <body>
 
   <header class="header">
-    <h1 class="header__title">Привет<br>мой друг!</h1>
+    <h1 class="header__title">Привет<br>Виталик!</h1>
   </header>
 
 
   <article class="article article_whitebg article_first">
     <h2 class="black">Это моя<br>страница!</h2>
     <p class="black">Я научился писать <strong>HTML</strong>, а теперь я подключил свой первый стилевой файл и всё стало
-      красивым :) Очень скоро я сделаю ещё больше таких же страниц!</p>
+      красивым. НАдеюсь тебе понравилось</p>
   </article>
 
 
   <article class="article article_bluebg article_second">
 
     <h2 class="white">Свяжись со мной!</h2>
-    <p class="white">Ты по-любому захочешь, чтобы я сделал тоже самое и тебе. Поэтому я создал форму обратной связи!
+    <p class="white">Ты по-любому захочешь, чтобы я сделал тоже самое и тебе.
       Пиши, не стесняйся</p>
 
     <form class="form">
