--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <article class="article article_whitebg article_first">
     <h2 class="black">Это моя<br>страница!</h2>
     <p class="black">Я научился писать <strong>HTML</strong>, а теперь я подключил свой первый стилевой файл и всё стало
-      красивым. НАдеюсь тебе понравилось</p>
+      красивым. Надеюсь, Виталик, тебе понравится :)</p>
   </article>
 
 
