--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
 <body>
 
   <header class="header">
-    <h1 class="header__title">Привет<br>Виталик!</h1>
+    <h1 class="header__title">Привет<br>Программист!</h1>
   </header>
 
 
   <article class="article article_whitebg article_first">
     <h2 class="black">Это моя<br>страница!</h2>
     <p class="black">Я научился писать <strong>HTML</strong>, а теперь я подключил свой первый стилевой файл и всё стало
-      красивым. Надеюсь, Виталик, тебе понравится :)</p>
+      красивым. Надеюсь, тебе понравится :)</p>
   </article>
 
 
