--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
 
   <header class="header">
-    <h1 class="header__title">Привет<br>Программист!</h1>
+    <h1 class="header__title">Привет<br>Друг!</h1>
   </header>
 
 
